# vlasolver

./: .clang-format  .clangd  .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  README.md  analysis.ipynb  compose.yaml  dev.sh  ex_real_A.cpp  poisson.cpp  poisson.cpp.bak  poisson_1d.cpp  run.sh
.devcontainer/: Apptainer.def  Dockerfile  compose.cuda.yaml  compose.yaml  cuda.Dockerfile
.ipynb_checkpoints/: Untitled-checkpoint.md  analysis-checkpoint.ipynb
examples/: plasma_past_charged_cylinder.ini
src/: poisson.cpp  poisson_1d.cpp  vlasov.cpp
src/1d1v/: CMakeLists.txt  grid.cpp  grid.hpp  main.cpp  poisson.cpp  poisson.cpp.bak  poisson.hpp  vlasov.cpp  vlasov.cpp.bak  world.cpp  world.hpp
src/2d2v/: CMakeLists.txt  grid.cpp  grid.hpp  main.cpp  poisson.cpp  poisson.hpp  vlasov.cpp  vlasov.hpp  world.cpp  world.hpp  writer.cpp  writer.hpp
